force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__Amount__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>