force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__Attempts__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Attempts__c</fullName>
    <description>Number of payment attempts made for this invoice</description>
    <label>Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>