force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__Discount_Amount_Off__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Discount_Amount_Off__c</fullName>
    <label>Discount Amount Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>