force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__EndingBalance__c.field-meta.xml
<CustomField>
    <fullName>sfcma__EndingBalance__c</fullName>
    <label>Ending Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>