force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__IsPaid__c.field-meta.xml
<CustomField>
    <fullName>sfcma__IsPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not payment was successfully collected for this invoice</description>
    <label>Paid?</label>
    <type>Checkbox</type>
</CustomField>