force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__StartDate__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StartDate__c</fullName>
    <description>Start of the usage period during which invoice items were added to this invoice.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>