force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__StripeInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeInvoiceId__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Invoice Id (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>