force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__StripeInvoiceIdUnique__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeInvoiceIdUnique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Stripe Invoice Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>