force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__Subscription__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The subscription that this invoice was prepared for, if any.</description>
    <label>Subscription</label>
    <referenceTo>sfcma__Subscription__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>