force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Subtotal__c</fullName>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>