force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TaxAmount__c</fullName>
    <description>Tax amount applied to the invoice</description>
    <label>Tax Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>