force-app/main/default/objects/sfcma__Invoice__c/fields/sfcma__VATNumber__c.field-meta.xml
<CustomField>
    <fullName>sfcma__VATNumber__c</fullName>
    <description>VAT Number of the invoice&apos;s subscription.</description>
    <formula>sfcma__Subscription__r.sfcma__VATNumber__c</formula>
    <label>VAT Number</label>
    <type>Text</type>
</CustomField>