force-app/main/default/objects/sfcma__Invoice__c/listViews/sfcma__All.listView-meta.xml
<ListView>
    <fullName>sfcma__All</fullName>
    <columns>sfcma__Amount__c</columns>
    <columns>sfcma__Attempts__c</columns>
    <columns>sfcma__EndDate__c</columns>
    <columns>sfcma__IsPaid__c</columns>
    <columns>sfcma__Subscription__c</columns>
    <columns>sfcma__Transaction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>